--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="features">
             <div class="feature">
                 <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-global"></use></svg>
-                <h4 class="heading-4">world's best luxury homes</h4>
+                <h4 class="heading-4 heading-4--dark">world's best luxury homes</h4>
                 <p class="feature__text">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
                     necessitatibus pariatur voluptatibus.
@@ -32,7 +32,7 @@
             </div>
             <div class="feature">
                 <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-trophy"></use></svg>
-                <h4 class="heading-4">Only the best properties</h4>
+                <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
                 <p class="feature__text">
                     Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a
                     eligendi aut quia.
@@ -42,7 +42,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
-                <h4 class="heading-4">All home is in top locations</h4>
+                <h4 class="heading-4 heading-4--dark">All home is in top locations</h4>
                 <p class="feature__text">
                     Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur
                     harum.
@@ -50,7 +50,7 @@
             </div>
             <div class="feature">
                 <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-key"></use></svg>
-                <h4 class="heading-4">New home in one week</h4>
+                <h4 class="heading-4 heading-4--dark">New home in one week</h4>
                 <p class="feature__text">
                     Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet
                     consectetur adipisicing elit.
@@ -60,7 +60,7 @@
                 <svg class="feature__icon">
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
-                <h4 class="heading-4">Top one realtores</h4>
+                <h4 class="heading-4 heading-4--dark">Top one realtores</h4>
                 <p class="feature__text">
                     Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio
                     necessitatibus pariatur voluptatibus.
@@ -68,7 +68,7 @@
             </div>
             <div class="feature">
                 <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-lock"></use></svg>
-                <h4 class="heading-4">Secure paymets on nexter</h4>
+                <h4 class="heading-4 heading-4--dark">Secure paymets on nexter</h4>
                 <p class="feature__text">
                     Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
                 </p>
