homes section - done

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p>$1,200,000</p>
                 </div>
 
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -157,7 +157,7 @@
                     <p>$2,750,000</p>
                 </div>
 
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -191,7 +191,7 @@
                     <p>$850,000</p>
                 </div>
 
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -225,7 +225,7 @@
                     <p>$1,950,000</p>
                 </div>
 
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -259,7 +259,7 @@
                     <p>$9,500,000</p>
                 </div>
 
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
 
             <div class="home">
@@ -293,7 +293,7 @@
                     <p>$320,000</p>
                 </div>
 
-                <button class="cta">Contact realtor</button>
+                <button class="btn home__btn">Contact realtor</button>
             </div>
         </section>
         <section class="gallery">Gallery</section>
